<resources>
    <string name="app_name">Tracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Projects</string>
    <string name="menu_biomass">Biomass</string>
    <string name="menu_pyrolysis">Pyrolysis</string>
    <string name="menu_trans">Transport</string>
    <string name="menu_sale">Sales</string>
    <string name="menu_corc">CORCs</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> </string>
    <string name="trans_package">Transport #</string>

    <string name="pack_title">Pack ID #</string>
    <string name="biomass_package_title">Biomass #</string>
    <string name="trans_package_title">Transport #</string>
    <string name="dry_package_title">Drying #</string>
    <string name="pyr_package_title">Pyrolysis #</string>
    <string name="sale_package_title">Client delivery #</string>
    <string name="corc_package_title">CORCs #</string>


    <string name="c_comment">Name: </string>
    <string name="c_address">Address: </string>
    <string name="c_latitude">Latitude: </string>
    <string name="c_longitude">Longitude: </string>
    <string name="c_distance_to_plant_km">Distance to plant, km: </string>
    <string name="c_type">Type: </string>
    <string name="c_weight">Weight, kg: </string>
    <string name="c_moisture">Moisture, %: </string>
    <string name="c_carbon">Carbon in dry matter, %: </string>
    <string name="c_in">In: </string>
    <string name="c_out">Out: </string>


    <string name="bs_package">Select biomass data pack</string>
    <string name="bs_type">Type</string>
    <string name="bs_weight">Weight, kg</string>
    <string name="bs_moisture">Moisture, %</string>
    <string name="bs_carbon_dm_title">Carbon in dry matter, %</string>
    <string name="bs_site">Location</string>
    <string name="c_site">Location</string>

    <string name="biomass_type_1">Wood chips</string>
    <string name="biomass_type_2">Algae</string>
    <string name="biomass_type_3">Other</string>

    <string name="truck_type_1">Small Cargo Van (3,5 t)</string>
    <string name="truck_type_2">Medium Duty Truck (10 t)</string>
    <string name="truck_type_3">Heavy Duty Truck (20 t)</string>
    <string name="truck_type_4">Custom</string>

    <string name="bs_weight_hint">kg</string>
    <string name="bs_weight_helper">none</string>
    <string name="bs_moisture_hint">%</string>
    <string name="bs_moisture_helper">none</string>

    <string name="biomass_status_raw">row</string>
    <string name="summary">Summary</string>
    <string name="submit">Submit</string>
    <string name="change">Change</string>
    <string name="add_package">+ Add package</string>
    <string name="add_project">+ Add project</string>
    <string name="proj_type">Type:</string>
    <string name="rottweil">Rottweil</string>
    <string name="proj_continueable">continueable</string>
    <string name="proj_blodnoch">Blodnoch</string>
    <string name="proj_location">Location:</string>
    <string name="proj_number_of_reactors">Number of reactors:</string>
    <string name="proj_total_power">Total power:</string>
    <string name="ok">Ok</string>


    <string name="edit">Edit</string>
    <string name="map">Map</string>
    <string name="select_truck">Select truck</string>
    <string name="corc_pack">CORC</string>
    <string name="progress">Progress: </string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="select_point_on_map">Select point on map</string>

    <string name="gap">    </string>


</resources>